@startuml
'https://plantuml.com/class-diagram
enum CommandType {
CREATE
READ
UPDATE
DELETE
EXIT
}

class Command {
   - input: String
   - outputMessage: String
   - isExit: boolean = false
   + Command()
   + Command(input)
   + execute(): void
}

class Income
class ExpenseList
Command ..> "1" ExpenseList
Command ..> "0..*" Income
Command --> "1" CommandType
class ViewAllExpenses extends Command {
    ViewAllExpensesCommand()
}
class FindExpenseCommand extends Command {
    FindExpenseCommand()
}
@enduml